fixed the layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,45 @@
 body{
-    background: hsl(212, 45%, 89%);
-    margin: auto;
-}
-
-.QR{
-    height: 180px;
-    width: 180px;
-    border-radius: 9px;
-    margin-left:0;
-    margin-right:0;
-    
-}
-
-.outer{
-    background: hsl(0, 0%, 100%);
-    background-position: center;
-    border-radius: 13px;
-    padding-top: 7px;
-    padding-left: 7px;
-    margin-top: 230px;
-    margin-left: 680px;
-    margin-right: 662px;
-    padding-bottom: 20px;
-    
-}
-
-p{
-    font-size:13px;
     font-family: 'Outfit', sans-serif;
-    text-align:center;
-    margin: auto;
-    display: block;
-    margin: 0 auto;
-    padding-bottom: auto;
+    background: hsl(212, 45%, 89%);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    font-size: 12px;  
 }
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    max-width: 290px;
+    margin: 0 auto;  
+}
+
+.qr{
+    background-color:hsl(0, 0%, 100%);
+    padding: 11px;
+    border-radius: 20px;
+    text-align: center;
+    margin: 0 1em;
+}
+
+.qr img{
+    width:100%;
+    height: 100%;
+    border-radius: 11px;    
+}
+
+.text{
+    padding: 22px 10px;
+}
+
+.text h2{
+    color: hsl(218, 44%, 22%);
+}
+
+.text p{
+    color: hsl(220, 15%, 55%);
+    padding-top: 7px;
+}
